# local-pg

./: README.md  pyproject.toml  sample_dot_env
localpg/: cfg.py  constants.py  create-pg-db.sh  main.py  schemas.py
localpg/alembic/: env.py  script.py.mako
localpg/alembic/schema/: db_models.py
